# Django-Library

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_auto_20210219_1244.py  0003_bookinstance_borrowed.py
catalog/templates/: base_generic.html  index.html
catalog/templates/catalog/: author_detail.html  author_list.html  book_detail.html  book_list.html  bookinstance_list_borrowed_by_user.html
locallibrary/: settings.py  urls.py
templates/registration/: logged_out.html
