[tool.poetry]
name = "PythonWeb"
version = "0.1.0"
description = ""
authors = ["dien2khust <diennv@icts.vn>"]

[tool.poetry.dependencies]
python = "^3.8"
mysqlclient = "^2.0.3"
Django = "^3.1.7"
python-dotenv = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
